<resources>
    <string name="app_name">MoneyHelper0.1</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="thee">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eath">8</string>
    <string name="nine">9</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="data">Data</string>
    <string name="comment">Comment</string>
    <string name="retUrn">Return</string>


</resources>
